<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maps to Muzei</string>
    <string name="source_name">Maps to Muzei</string>
    <string name="source_description">Wallpapers from maps based on your local position</string>
    <string name="share">Share map</string>
    <string name="source_error_no_artwork_to_share">No map to share.</string>
    <string name="action_settings">Settings</string>
    <string name="map_type_label">Map theme</string>
    <string name="invert_lightness_label">Invert lightness</string>
    <string name="zoom_label">Zoom level</string>
    <string name="title_activity_settings">Settings</string>
    <string name="update_interval_label">Update frequency</string>
    <string name="wifi_only_label">Update only over WiFi</string>

    <string-array name="update_frequency_titles">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <integer-array name="update_frequency_values">
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </integer-array>

    <string-array name="map_types_titles">
        <item>Roadmap</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
        <item>Neon</item>
        <item>Sepia</item>
    </string-array>
    <string-array name="map_types_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>-1</item>
        <item>-1</item>
    </string-array>
    <string-array name="map_types_sources">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
</resources>
