<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#22000000"
    tools:context="net.bonysoft.mapsmuzei.SettingsActivity">

    <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/app_name"/>

    <LinearLayout
            android:id="@+id/layout_map_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_below="@id/img_logo"
            android:layout_marginTop="40dp"
            android:weightSum="1">

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.35"
                android:text="@string/map_type_label"/>

        <Spinner
                android:id="@+id/map_type_spinner"
                android:layout_weight="0.65"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <CheckBox
            android:id="@+id/check_inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:text="@string/invert_lightness_label"
            android:layout_below="@+id/layout_map_type"/>

    <RelativeLayout
            android:id="@+id/layout_zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/check_inverse"
            android:layout_marginTop="8dp">

        <TextView
                android:id="@+id/zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/zoom_label"/>

        <TextView
                android:id="@+id/zoom_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"/>

        <SeekBar
                android:id="@+id/zoom_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zoom_label"
                android:layout_marginTop="4dp"
                android:max="18"  />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/layout_update_interval"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_below="@id/layout_zoom"
            android:layout_marginTop="8dp"
            android:weightSum="1">

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.35"
                android:text="@string/update_interval_label"/>

        <Spinner
                android:id="@+id/update_interval_spinner"
                android:layout_weight="0.65"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
